--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     justify-content: center ;
     align-items: center;
     background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
-    background: url('background2.png') no-repeat center/cover;
+    background: url('images/background2.png') no-repeat center/cover;
 }
 
 #weather {
@@ -20,43 +20,43 @@ body{
     height: auto;
     border-radius: 40px;
     padding: 50px 30px;
-    background: url('xuan.jpg') no-repeat center/cover;
+    background: url('images/xuan.jpg') no-repeat center/cover;
 }
 
 .spring{
     /*background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));*/
-    background: url('background2.png') no-repeat center/cover;
+    background: url('images/background2.png') no-repeat center/cover;
 }
 
 .spring #weather{
-    background: url('xuan.jpg') no-repeat center/cover;
+    background: url('images/xuan.jpg') no-repeat center/cover;
 }
 
 .summer{
     /*background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));*/
-    background: url('background2.png') no-repeat center/cover;
+    background: url('images/background2.png') no-repeat center/cover;
 }
 
 .summer #weather{
-    background: url('ha.jpg') no-repeat center/cover;
+    background: url('images/ha.jpg') no-repeat center/cover;
 }
 
 .autumn{
     /*background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));*/
-    background: url('background2.png') no-repeat center/cover;
+    background: url('images/background2.png') no-repeat center/cover;
 }
 
 .autumn #weather{
-    background: url('thu.jpg') no-repeat center/cover;
+    background: url('images/thu.jpg') no-repeat center/cover;
 }
 
 .winter{
     /*background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));*/
-    background: url('background2.png') no-repeat center/cover;
+    background: url('images/background2.png') no-repeat center/cover;
 }
 
 .winter #weather{
-    background: url('dong.jpg') no-repeat center/cover;
+    background: url('images/dong.jpg') no-repeat center/cover;
 }
 
 .search {
@@ -67,7 +67,7 @@ body{
     background: rgba(255, 255, 255, 0.7);
     border-radius: 0 15px 0 15px;
     box-shadow: 0 5px 4px rgba(0, 0, 0, 0.2);
-    transition: 0.4s;
+    transition: 0.4s ease;
     font-size: 19px;
 }
 
